<?xml version="1.0"?>
<package format="2">
  <name>rosshow2</name>
  <version>2.0.0</version>
  <description>rosshow2</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>MIT</license>

  <build_depend>librosshow</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>librosshow</run_depend>
  <run_depend>rclpy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
