<?xml version="1.0"?>
<package format="2">
  <name>rosshow2</name>
  <version>2.0.0</version>
  <description>rosshow2</description>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>MIT</license>

  <exec_depend>librosshow</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
